@@ -40,8 +40,8 @@ if (!$gallery) {
 	$gallery = new stdClass();
 }
 
-$gallery->version = "1.3.5-cvs-b45";
-$gallery->config_version = 37;
+$gallery->version = "1.3.5-cvs-b46";
+$gallery->config_version = 38;
 $gallery->album_version = 12;
 $gallery->remote_protocol_version = 1;
 $gallery->url = "http://gallery.sourceforge.net";
