@@ -1,3 +1,8 @@
+2003-07-07  Andrew Lindeman <joyoflinux@yahoo.com> 1.3.5-cvs-b46
+	
+	* Implemented a slightly modified patch by Jonathan Larmour, to
+	  include jpegtran support.
+
 2003-07-07  Andrew Lindeman <joyoflinux@yahoo.com> 1.3.5-cvs-b45
 	
 	* Change the text printed when an installation has warnings.
